# client-python

./: .gitattributes  .gitconfig  .gitignore  .travis.yml  .zenodo.json  CHANGES.txt  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  TODO.md  binary_compare.md  binary_compare.py  format_compare.py  hapi.py  hapi_demo.py  hapi_test.py  hapiplot.py  problem_plots.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/: pyhc-packages.txt
.github/workflows/: phep3-compliance.yml  pyhc-actions.yml
docs/: index.rst
docs/hapi_client/: index.rst
hapi_client/: __init__.py  hapi.py  hapiplot.py
hapi_client/tests/: test_hapi.py
hapi_client/utils/: datetick.py  format_compare.py
hapiclient/: __init__.py  cache.py  capabilities.py  catalog.py  data.py  get.py  hapi.py  hapi_todf.py  hapiadapters.py  hapiplot.py  hapiplot_test.py  hapitime.py  info.py  log.py  servers.py  time.py  util.py
hapiclient/autoplot/: autoplot.py  autoplot_test.py  server.jy
hapiclient/gallery/: gallery.py  gallery_test.py
hapiclient/plot/: datetick.py  datetick_explorer.py  datetick_test.py  heatmap.py  heatmap_test.py  timeseries.py  timeseries_test.py  util.py
hapiclient/plotserver/: hapiplotserver.py  hapiplotserver_test.py  index.html
hapiclient/test/: compare.py  hapi_test.py  pytest.ini  readcompare.py  test_chunking.py  test_datetime2hapitime.py  test_hapi.py  test_hapitime2datetime.py  test_hapitime_reformat.py
hapiclient/test/data/: test_dataset.pkl  test_parameter.pkl
hapiclient/util/: datetick.py
licenses/: LICENSE.rst
misc/: .pypirc  datetick.py  datetick_explorer.py  datetick_test.py  format_compare.md  format_compare.py  hapi_logging_demo.py  ipynb_drop_output  nan_notes.py  py2ipynb.py  smoke.py  version.py
test/: test_cache.py  test_chunking.py  test_datetime2hapitime.py  test_hapi_data_requests.py  test_hapi_metadata_requests.py  test_hapitime2datetime.py  test_hapitime_reformat.py  test_logging.py  test_subset_meta.py
test/data/: test_parameter.json
test/util/: compare.py  get_logger.py
