[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = hapi_client
description = A Python client for the Heliophysics Application Programmer’s Interface
long_description = Python client for HAPI (Heliophysics Application Programmer’s Interface), a set
author = of services to enable access to data and metadata.Robert Weigel
author_email = rweigel@gmu.edu
license = BSD 3-Clause
url = https://github.com/hapi-server/client-python
edit_on_github = True
github_project = hapi-server/client-python
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = sunpy
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.9.dev
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.5

[entry_points]

astropy-package-template-example = packagename.example_mod:main

